Added html and Javascript

--- a/index.html
+++ b/index.html
@@ -7,12 +7,28 @@
     <link rel="stylesheet" href="style.css">
       <title>Dad Jokes</title>
 </head>
-<body>
+<body class="bg-main" style="background-image: url('images/background1.jpg')">
+  
+    <h1 class="heading">Dad Jokes</h1>
     <div class="container">
-      <div class="panel active" style=" background-image:url ('')">
-        <h3>The Joke Jar</h3>
+      <div class="panel active" style ="background-image: url('images/joke1.jpg')" >
+        <h3>The Joke Jar!</h3>
       </div>
-
+      <div class="panel" id="panel2"style ="background-image: url('images/joke2.jpg')" >
+        <h3> The Fun Zone! </h3>
+      </div>
+      <div class="panel" style ="background-image: url('images/joke3.jpg')" >
+        <h3> Laugh Out Loud!</h3>
+      </div>
+      <div class="panel" style ="background-image: url('images/joke4.jpg')" >
+        <h3> Lighten Up! </h3>
+      </div>
+      <div class="panel" style ="background-image: url('images/joke5.jpg')" >
+        <h3>Crack a  Smile!  </h3>
+      </div>
+      <div class="panel" style ="background-image: url('images/joke6.jpg')" >
+        <h3> The Humour Hub! </h3>
+      </div>
     </div>
     
  <script src="script.js"></script>
